2008-07-06  Ales Hakl  <ales at hakl dot net>

	* src/strings.c: removed the for-each api
	(dfsch_string_cmp_ci): case-insensitive comparison
	(string_case): case conversions of strings.

2008-07-05  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_char_*case): Case conversions of characters 
	(utf8_substring_cb): fixed substring

2008-06-28  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_get_object_properties): object properties

	* dfsch/number.h: number type and exactness predicates

	* src/weak.c (weak_key_hash_ref): weak-key-hash

2008-06-27  Ales Hakl  <ales at hakl dot net>

	* src/number.c: bignum support in standard numeric API
	(frac_cons): fracnums

	* src/bignum.c: usable bignums (without reasonable input)

2008-06-26  Ales Hakl  <ales at hakl dot net>

	* src/bignum.c (bignum_div_big): reasonable bignum division

2008-06-25  Ales Hakl  <ales at hakl dot net>

	* src/bignum.c (bignum_div_impl): unsigned bignum division

2008-06-24  Ales Hakl  <ales at hakl dot net>

	* src/bignum.c (bignum_sub): bignum subtraction (working)
	(bignum_mul): bignum multiplication (slow)

2008-06-23  Ales Hakl  <ales at hakl dot net>

	* src/bignum.c (bignum_add): bignum addition (definitely not usable)

2008-06-20  Ales Hakl  <ales at hakl dot net>

	* dfsch/util.h (DFSCH_RWLOCK_RDLOCK): emulation of rwlock using mutex

2008-05-23  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_make_context): *dfsch-platform*

2008-05-14  Ales Hakl  <ales at hakl dot net>

	* src/system.c: get-internal-*-time

	* src/number.c: coorect promotion of large longs to flonum

2008-05-09  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_obj_write): removed redundant append of buf

2008-04-30  Ales Hakl  <ales at hakl dot net>

	* src/hash.c: export DFSCH_STANDARD_HASH_TYPE

2008-04-28  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (main): fix -i

	* src/number.c (dfsch_number_mul): correct promotions for
	multiplication
